--- a/genindex.html
+++ b/genindex.html
@@ -800,13 +800,21 @@
 </li>
         <li><a href="api/vasca/vasca.tables.html#vasca.tables.TableCollection">TableCollection (class in vasca.tables)</a>
 </li>
-    </ul></td>
-    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="api/vasca/vasca.utils.html#vasca.utils.tgalex_to_astrotime">tgalex_to_astrotime() (in module vasca.utils)</a>
 </li>
         <li><a href="api/vasca/vasca.utils.html#vasca.utils.timeit">timeit() (in module vasca.utils)</a>
 </li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="api/vasca/vasca.columns.html#vasca.columns.VASCAColumn.to_dict">to_dict() (vasca.columns.VASCAColumn method)</a>
+</li>
+        <li><a href="user_guide/data_model.html#term-tt_detections"><strong>tt_detections</strong></a>
+</li>
+        <li><a href="user_guide/data_model.html#term-tt_fields"><strong>tt_fields</strong></a>
+</li>
+        <li><a href="user_guide/data_model.html#term-tt_sources"><strong>tt_sources</strong></a>
+</li>
+        <li><a href="user_guide/data_model.html#term-tt_visits"><strong>tt_visits</strong></a>
 </li>
     </ul></td>
   </tr></table>
@@ -970,7 +978,7 @@
       
     </aside>
   </div>
-</div><script src="_static/documentation_options.js?v=e1629aa7"></script>
+</div><script src="_static/documentation_options.js?v=58634f1a"></script>
     <script src="_static/doctools.js?v=888ff710"></script>
     <script src="_static/sphinx_highlight.js?v=dc90522c"></script>
     <script src="_static/scripts/furo.js?v=5fa4622c"></script>
